Add max_cost parameter
